# infographics-be

./: .gitignore  Infographics.drawio  build.demosbt  build.sbt  docker-compose.yml
db/migration/: V1__Create_competition_table.sql  V1__create_competitions_table.sql  V2__create_sport_kinds_table.sql  V3__create_laps_table.sql  V4__drop_sequence_column.sql
geograf/: geograf.proto  geograf.py  geograf_pb2.py  pyproject.toml  requirements.txt
geograf/proto/: geograf.proto
geograf/src/server/: geograf.ipynb  geograf.py  grpcurl_request_for_CalculateLapDistance.ipynb  main.py
geograf/src/server/proto/: geograf_pb2_grpc.py
geograf/tests/: test_calculate_cumulative_distances.py
geograf/tests/data/: Gonuyk_Canyon.gpx  Kemer_Gedelme_Ovachik.gpx  Moscow.gpx  Naliboki_2022.gpx  Naliboki_2023.gpx  Naliboki_2024.gpx  Ovachik.gpx  Zayamashnae.gpx  cycling_Raubichi_20526304516.gpx  euroservice.gpx  grpcurl_CalculateLapDistance.json  running_zg_21189507559.gpx  running_zg_21252698158.gpx
map_matcher/: map_matcher.proto  map_matcher.py  map_matcher_pb2.py  map_matcher_pb2_grpc.py
project/: Versions.scala  plugins.sbt
sandbox/mapmatching/: garmin_request.sh  grpcurl_CalculateLapDistance.json  grpcurl_MatchRoutes.json  grpcurl_request.json  grpcurl_request_for_Match_Routes.ipynb  mapmatching.ipynb  response.json
sandbox/mapmatching/testdata/: run9km.gpx  run9km.json  swimming_kemer.gpx  tsna.gpx  (+2 more)
sandbox/plotly/: euroservice.json  plotly_chart_and_map.html  plotly_map.html  zaryadka.json
sandbox/recharts/: laps.js
sandbox/test_data/: data.json  test_data.ipynb
(+14 files in other folders)
