# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geograf"
version = "0.1.0"
description = "gRPC server for geographic calculations"
authors = [
    {name = "Mikita Kharytonau", email = "nikita.kharitonov99@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
